# ocp-diag-viewer

./: .gcloudignore  .gitignore  README.md  app.yaml  config.toml  pyproject.toml  tox.ini
frontend/: .eslintrc.json  README.md  angular.json  karma.conf.js  ocp_diag_test_data.js  package-lock.json  package.json
frontend/src/: index.html  styles.css
frontend/src/app/: app.css  app.module.ts  app.ng.html  app.spec.ts  app.ts  app_routing.module.ts  navbar.css  navbar.ng.html  navbar.spec.ts  navbar.ts  side_info.css  side_info.ng.html  side_info.spec.ts  side_info.ts
frontend/src/components/errors_table/: errors_table.css  errors_table.ng.html  errors_table.spec.ts  errors_table.ts  errors_table_module.ts
frontend/src/components/key_value_table/: key_value_table.css  key_value_table.ng.html  key_value_table.spec.ts  key_value_table.ts  key_value_table_module.ts
frontend/src/components/session_title_bar/: session_title_bar.css  session_title_bar.ng.html  session_title_bar.spec.ts  session_title_bar.ts  session_title_bar_module.ts
frontend/src/logs/: logs_module.ts  logs_view.css  logs_view.ng.html  logs_view.spec.ts  logs_view.ts
frontend/src/services/: result_record_service.spec.ts  result_record_service.ts  results_type.ts  side_info_service.spec.ts  side_info_service.ts  testrun_service.spec.ts  testrun_service.ts
frontend/src/testrun/: hardware_components.css  hardware_components.ng.html  hardware_components.spec.ts  hardware_components.ts  platform_infos.ng.html  platform_infos.spec.ts  platform_infos.ts  software_infos.ng.html  software_infos.spec.ts  software_infos.ts  testrun_module.ts  testrun_view.ng.html  testrun_view.spec.ts  testrun_view.ts
frontend/src/teststeps/: teststeps_list.css  teststeps_list.ng.html  teststeps_list.spec.ts  teststeps_list.ts  teststeps_module.ts  teststeps_view.ng.html  teststeps_view.spec.ts  teststeps_view.ts
frontend/src/utility/: utils.spec.ts  utils.ts
tests/: viewer_runner_test.py
tests/client/: remove_static_path_test.py
tests/libs/: build_ocp_diag_result_data_test.py  classifier_test.py  form_source_location_info_test.py  meltan_record_builder_test.py  ocp_record_builder_test.py  processor_test.py
tests/server/: conftest.py  insert_ocp_diag_result_data_test.py  middlewares_test.py  storage_test.py  upload_test.py  view_test.py
tests/server/testdata/: valid_upload_test.txt
tests/testdata/: color_output.txt  index.html
viewer/: viewer_runner.py
viewer/client/: cli.py  remove_static_path.py
viewer/libs/: build_ocp_diag_result_data.py  classifier.py  form_source_location_info.py  meltan_record_builder.py  ocp_record_builder.py  processor.py  record_builder.py
viewer/server/: __init__.py  auth.py  insert_ocp_diag_result_data.py  main.py  middlewares.py  storage.py  upload.py  view.py
viewer/server/templates/: 500_error.html  unauthorised.html  upload.html
(+26 files in other folders)
